samples/_failures_safe/1761526755_1fc19c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63070d99.c: In function ‘parser_init’:
./samples/SAFE/__tmp_63070d99.c:150:5: error: expected declaration or statement at end of input
  150 |     parser->lexer = lexer;
      |     ^~~~~~
